fixed alignment

--- a/style.css
+++ b/style.css
@@ -72,14 +72,14 @@ h1 {
 #radio-buttons {
   position: absolute;
   top: 115px;
-  left: 110px;
+  left: 275px;
 }
 
 .button {
   float: none;
   position: absolute;
   top: 690px;
-  left: 155px;
+  left: 317px;
   background: linear-gradient(#666666, #000000);
   display: inline-block;
   color: #ffffff;
